# PrimeZeta

./: .ci-trigger.md  .gitignore  AUTONOMOUS_NIGHT_MISSION.md  BENCHMARK_COMPLETION_SUMMARY.md  BENCHMARK_RESULTS.md  BENCHMARK_STALL_ANALYSIS.md  BURST_PATTERN_ANALYSIS.md  CHANGELOG.md  COMPATIBILITY_REPORT_v0.3.24.md  COMPETITION_RULES_ANALYSIS.md  COMPILER_FIX_TRACKER.md  COMPILER_REBUILD_COMPLETE.md  COMPILER_REBUILD_TRACKER.md  COMPILER_REGRESSION_BUG.md  CONST_GENERICS_PROGRESS_SUMMARY.md  CONVERSION_NOTES.md  CTFE_OPTIMIZATION.md  Cargo.toml  DREAMS.md  DiagnosticSPRINT.md  FAITHFULNESS_PARALLELISM_ANALYSIS.md  FINAL_BENCHMARK_REPORT.md  FINAL_BENCHMARK_REPORT_AGENT5.md  FINAL_COMPETITION_SUBMISSION_SUMMARY.md  FINAL_COORDINATION_REPORT.md  FINAL_FRESH.z  FINAL_LIMIT_1000_REPORT.md  FINAL_MURPHY_SIEVE.z  FINAL_OPTIMIZED.z  FINAL_PERFORMANCE_REPORT.md  FINAL_SUBMISSION.z  FIX_SUMMARY.md  FULL_BENCHMARK_SUMMARY_20260405_214229.md  FULL_BENCHMARK_TRACKER.md  GATEWAY_STABILITY_FINDINGS.md  GITHUB_CLEANUP_COMPLETION_REPORT.md  GITHUB_PUSH_VERIFICATION_REPORT.md  GITHUB_RELEASES_FIX_TRACKER.md  GIT_FIX_TRACKER.md  GOD_MODE_CHECKLIST.md  (+497 more)
Primes/PrimeZeta/solution_1/: COMPETITION_CHECKLIST.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_SUMMARY.md  benchmark_wrapper.z  build.sh  build_test.sh  final_check.ps1  run.bat  run.sh  test_implementation.py  (+3 more)
final_submission/: Cargo.toml  FINAL_SUBMISSION_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  build.ps1
final_submission/src/: competition_wrapper.rs  murphy_sieve.rs
(+319 files in other folders)
