[package]
name = "murphy-sieve-competition"
version = "1.0.0"
authors = ["MurphySieveTeam <competition@example.com>"]
edition = "2021"
description = "Optimized Murphy's Sieve implementation for programming competition"
license = "MIT"
repository = "https://github.com/MurphySieveTeam/murphy-sieve-competition"
readme = "README.md"
keywords = ["sieve", "primes", "competition", "algorithm", "optimization"]
categories = ["algorithms", "science"]

[features]
competition = []  # Enable infinite loop for competition

[[bin]]
name = "murphy-sieve"
path = "src/murphy_sieve.rs"

[[bin]]
name = "competition-wrapper"
path = "src/competition_wrapper.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# No external dependencies for competition purity