[package]
name = "primezeta-solution"
version = "1.0.0"
edition = "2021"
authors = ["Roy Murphy <roy@z-lang.org>"]
description = "PrimeZeta competition submission - Murphy's Sieve implementation"
license = "MIT"
repository = "https://github.com/murphsicles/zeta-competition"

[[bin]]
name = "prime_benchmark"
path = "src/prime_benchmark.rs"

[[bin]]
name = "rust_fallback"
path = "rust_fallback.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sieve_benchmark"
harness = false